--- a/form.html
+++ b/form.html
@@ -22,10 +22,10 @@
     </header>
     <nav>
         <ul class="menu">
-            <li class="item active"><a href="index.html">Inicio</a></li>
-            <li class="item active"><a href="cat.html">Catálogo</a></li>
-            <li class="item active"><a href="iframe.html">Sucursales</a></li>
-            <li class="item active"><a href="form.html">Contacto</a></li>
+            <li class="item "><a href="index.html">Inicio</a></li>
+            <li class="item "><a href="cat.html">Catálogo</a></li>
+            <li class="item "><a href="iframe.html">Sucursales</a></li>
+            <li class="item "><a href="form.html">Contacto</a></li>
             <li class="toggle" onclick="toggle(this);"><a href="#"><i class="fas fa-bars"></i></a></li>
         </ul>
     </nav>
@@ -54,5 +54,6 @@
     </main>
     <footer class="footer">BLACKHOUSE 🏡</footer>
     <script src="./js/form.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
