--- a/cat.html
+++ b/cat.html
@@ -20,10 +20,10 @@
     </header>
     <nav>
         <ul class="menu">
-            <li class="item active"><a href="index.html">Inicio</a></li>
-            <li class="item active"><a href="cat.html">Catálogo</a></li>
-            <li class="item active"><a href="iframe.html">Sucursales</a></li>
-            <li class="item active"><a href="form.html">Contacto</a></li>
+            <li class="item"><a href="index.html">Inicio</a></li>
+            <li class="item"><a href="cat.html">Catálogo</a></li>
+            <li class="item"><a href="iframe.html">Sucursales</a></li>
+            <li class="item"><a href="form.html">Contacto</a></li>
             <li class="toggle" onclick="toggle(this);"><a href="#"><i class="fas fa-bars"></i></a></li>
         </ul>
     </nav>
@@ -115,6 +115,7 @@
     <footer class="footer">BLACKHOUSE 🏡</footer>
     
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+     <script src="./js/main.js"></script>
     
 </body>
 </html>
