--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
             <h3>BlackHouse Inmobiliaria</h3>
         </div>
     </header>
-    <nav>
+    <nav class="nav">
         <ul class="menu">
-            <li class="item active"><a href="index.html">Inicio</a></li>
-            <li class="item active"><a href="cat.html">Catálogo</a></li>
-            <li class="item active"><a href="iframe.html">Sucursales</a></li>
-            <li class="item active"><a href="form.html">Contacto</a></li>
-            <li class="toggle" onclick="toggle(this);"><a href="#"><i class="fas fa-bars"></i></a></li>
+            <li class="item"><a href="index.html">Inicio</a></li>
+            <li class="item"><a href="cat.html">Catálogo</a></li>
+            <li class="item"><a href="iframe.html">Sucursales</a></li>
+            <li class="item"><a href="form.html">Contacto</a></li>
+            <li class="toggle" onclick="toggle(this);"><a href="#">
+            <i class="fas fa-bars"></i></a></li>
         </ul>
     </nav>
     <main>
@@ -64,6 +65,6 @@
             </section>
       </main>
       <footer class="footer">BLACKHOUSE 🏡</footer>
-    <script src="./js/main.js"></script>
+      <script src="./js/main.js"></script>
 </body>
 </html>
